# Interpreter

./: CMakeLists.txt  README.md  main.cpp  test.txt
lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp  main.cpp
message/: CMakeLists.txt  message.cpp  message.hpp
parser/: CMakeLists.txt  parser.cpp  parser.hpp
semantic/: CMakeLists.txt  semantic.cpp  semantic.hpp
